# x1zzLang-visual-ide

./: LICENSE  README.md  README_kr.md  RULES.md
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  i18n.js  index.css
frontend/src/components/: Canvas.jsx  CommentNode.jsx  ConfigWindow.jsx  ContainerNode.jsx  CustomNode.jsx  ErrorBoundary.jsx  ResultsWindow.jsx  ToolPalette.jsx
frontend/src/locales/: en.json  ko.json
frontend/src/transpiler/: dagWalker.js  nodeMappings.js  pathResolver.js  stdoutParser.js  x1zzTranspiler.js
x1zz-core/: Cargo.toml  README.md  ast.rs  codegen.rs  emitter.rs  error.rs  lexer.rs  parser.rs  runtime.rs  token.rs
